cdk.out/AvashyaVpcStack.template.json
{
 "Description": "Custom VPC Stack with 6 subnets across 2 AZs, IGW, 2 NAT Gateways, and S3 VPC Endpoint.",
 "Resources": {
  "AvashyaVpcCC90F1FD": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "AvashyaVpcStack/AvashyaVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "AvashyaVpcStack/AvashyaVpc/Resource"
   }
  },
  "AvashyaVpcPublicSubnet1Subnet0AD32FA1": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-south-1a",
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "AvashyaVpcStack/AvashyaVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "AvashyaVpcCC90F1FD"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AvashyaVpcStack/AvashyaVpc/PublicSubnet1/Subnet"
   }
  },
  "AvashyaVpcPublicSubnet1RouteTableDEF5BEB1": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "AvashyaVpcStack/AvashyaVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "AvashyaVpcCC90F1FD"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AvashyaVpcStack/AvashyaVpc/PublicSubnet1/RouteTable"
   }
  },
  "AvashyaVpcPublicSubnet1RouteTableAssociationF99155DD": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "AvashyaVpcPublicSubnet1RouteTableDEF5BEB1"
    },
    "SubnetId": {
     "Ref": "AvashyaVpcPublicSubnet1Subnet0AD32FA1"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AvashyaVpcStack/AvashyaVpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "AvashyaVpcPublicSubnet1DefaultRoute610CF265": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "AvashyaVpcIGWBBBA8DE4"
    },
    "RouteTableId": {
     "Ref": "AvashyaVpcPublicSubnet1RouteTableDEF5BEB1"
    }
   },
   "DependsOn": [
    "AvashyaVpcVPCGW83C91930"
   ],
   "Metadata": {
    "aws:cdk:path": "AvashyaVpcStack/AvashyaVpc/PublicSubnet1/DefaultRoute"
   }
  },
  "AvashyaVpcPublicSubnet1EIP1A09D872": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "AvashyaVpcStack/AvashyaVpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "AvashyaVpcStack/AvashyaVpc/PublicSubnet1/EIP"
   }
  },
  "AvashyaVpcPublicSubnet1NATGateway4567711C": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "AvashyaVpcPublicSubnet1EIP1A09D872",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "AvashyaVpcPublicSubnet1Subnet0AD32FA1"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "AvashyaVpcStack/AvashyaVpc/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "AvashyaVpcPublicSubnet1DefaultRoute610CF265",
    "AvashyaVpcPublicSubnet1RouteTableAssociationF99155DD"
   ],
   "Metadata": {
    "aws:cdk:path": "AvashyaVpcStack/AvashyaVpc/PublicSubnet1/NATGateway"
   }
  },
  "AvashyaVpcPublicSubnet2Subnet23D980E8": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-south-1b",
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "AvashyaVpcStack/AvashyaVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "AvashyaVpcCC90F1FD"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AvashyaVpcStack/AvashyaVpc/PublicSubnet2/Subnet"
   }
  },
  "AvashyaVpcPublicSubnet2RouteTableE19D0CCC": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "AvashyaVpcStack/AvashyaVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "AvashyaVpcCC90F1FD"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AvashyaVpcStack/AvashyaVpc/PublicSubnet2/RouteTable"
   }
  },
  "AvashyaVpcPublicSubnet2RouteTableAssociationF0A79DA8": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "AvashyaVpcPublicSubnet2RouteTableE19D0CCC"
    },
    "SubnetId": {
     "Ref": "AvashyaVpcPublicSubnet2Subnet23D980E8"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AvashyaVpcStack/AvashyaVpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "AvashyaVpcPublicSubnet2DefaultRouteCBC649A4": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "AvashyaVpcIGWBBBA8DE4"
    },
    "RouteTableId": {
     "Ref": "AvashyaVpcPublicSubnet2RouteTableE19D0CCC"
    }
   },
   "DependsOn": [
    "AvashyaVpcVPCGW83C91930"
   ],
   "Metadata": {
    "aws:cdk:path": "AvashyaVpcStack/AvashyaVpc/PublicSubnet2/DefaultRoute"
   }
  },
  "AvashyaVpcPublicSubnet2EIP9A051D78": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "AvashyaVpcStack/AvashyaVpc/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "AvashyaVpcStack/AvashyaVpc/PublicSubnet2/EIP"
   }
  },
  "AvashyaVpcPublicSubnet2NATGatewayD43A7678": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "AvashyaVpcPublicSubnet2EIP9A051D78",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "AvashyaVpcPublicSubnet2Subnet23D980E8"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "AvashyaVpcStack/AvashyaVpc/PublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "AvashyaVpcPublicSubnet2DefaultRouteCBC649A4",
    "AvashyaVpcPublicSubnet2RouteTableAssociationF0A79DA8"
   ],
   "Metadata": {
    "aws:cdk:path": "AvashyaVpcStack/AvashyaVpc/PublicSubnet2/NATGateway"
   }
  },
  "AvashyaVpcPrivateAppSubnet1Subnet42FA08DE": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-south-1a",
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "PrivateApp"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "AvashyaVpcStack/AvashyaVpc/PrivateAppSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "AvashyaVpcCC90F1FD"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AvashyaVpcStack/AvashyaVpc/PrivateAppSubnet1/Subnet"
   }
  },
  "AvashyaVpcPrivateAppSubnet1RouteTable00D7C96C": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "AvashyaVpcStack/AvashyaVpc/PrivateAppSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "AvashyaVpcCC90F1FD"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AvashyaVpcStack/AvashyaVpc/PrivateAppSubnet1/RouteTable"
   }
  },
  "AvashyaVpcPrivateAppSubnet1RouteTableAssociation08C8507D": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "AvashyaVpcPrivateAppSubnet1RouteTable00D7C96C"
    },
    "SubnetId": {
     "Ref": "AvashyaVpcPrivateAppSubnet1Subnet42FA08DE"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AvashyaVpcStack/AvashyaVpc/PrivateAppSubnet1/RouteTableAssociation"
   }
  },
  "AvashyaVpcPrivateAppSubnet1DefaultRoute7EBFE71B": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "AvashyaVpcPublicSubnet1NATGateway4567711C"
    },
    "RouteTableId": {
     "Ref": "AvashyaVpcPrivateAppSubnet1RouteTable00D7C96C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AvashyaVpcStack/AvashyaVpc/PrivateAppSubnet1/DefaultRoute"
   }
  },
  "AvashyaVpcPrivateAppSubnet2Subnet705404F7": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-south-1b",
    "CidrBlock": "10.0.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "PrivateApp"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "AvashyaVpcStack/AvashyaVpc/PrivateAppSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "AvashyaVpcCC90F1FD"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AvashyaVpcStack/AvashyaVpc/PrivateAppSubnet2/Subnet"
   }
  },
  "AvashyaVpcPrivateAppSubnet2RouteTableE4303AFB": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "AvashyaVpcStack/AvashyaVpc/PrivateAppSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "AvashyaVpcCC90F1FD"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AvashyaVpcStack/AvashyaVpc/PrivateAppSubnet2/RouteTable"
   }
  },
  "AvashyaVpcPrivateAppSubnet2RouteTableAssociation1431FB35": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "AvashyaVpcPrivateAppSubnet2RouteTableE4303AFB"
    },
    "SubnetId": {
     "Ref": "AvashyaVpcPrivateAppSubnet2Subnet705404F7"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AvashyaVpcStack/AvashyaVpc/PrivateAppSubnet2/RouteTableAssociation"
   }
  },
  "AvashyaVpcPrivateAppSubnet2DefaultRouteB18B9DB8": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "AvashyaVpcPublicSubnet2NATGatewayD43A7678"
    },
    "RouteTableId": {
     "Ref": "AvashyaVpcPrivateAppSubnet2RouteTableE4303AFB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AvashyaVpcStack/AvashyaVpc/PrivateAppSubnet2/DefaultRoute"
   }
  },
  "AvashyaVpcIsolatedDBSubnet1Subnet3053D103": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-south-1a",
    "CidrBlock": "10.0.4.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "IsolatedDB"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "AvashyaVpcStack/AvashyaVpc/IsolatedDBSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "AvashyaVpcCC90F1FD"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AvashyaVpcStack/AvashyaVpc/IsolatedDBSubnet1/Subnet"
   }
  },
  "AvashyaVpcIsolatedDBSubnet1RouteTable59DB1C2D": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "AvashyaVpcStack/AvashyaVpc/IsolatedDBSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "AvashyaVpcCC90F1FD"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AvashyaVpcStack/AvashyaVpc/IsolatedDBSubnet1/RouteTable"
   }
  },
  "AvashyaVpcIsolatedDBSubnet1RouteTableAssociationA7B0D3A0": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "AvashyaVpcIsolatedDBSubnet1RouteTable59DB1C2D"
    },
    "SubnetId": {
     "Ref": "AvashyaVpcIsolatedDBSubnet1Subnet3053D103"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AvashyaVpcStack/AvashyaVpc/IsolatedDBSubnet1/RouteTableAssociation"
   }
  },
  "AvashyaVpcIsolatedDBSubnet2SubnetA9958B2B": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-south-1b",
    "CidrBlock": "10.0.5.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "IsolatedDB"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "AvashyaVpcStack/AvashyaVpc/IsolatedDBSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "AvashyaVpcCC90F1FD"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AvashyaVpcStack/AvashyaVpc/IsolatedDBSubnet2/Subnet"
   }
  },
  "AvashyaVpcIsolatedDBSubnet2RouteTable9668D1D2": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "AvashyaVpcStack/AvashyaVpc/IsolatedDBSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "AvashyaVpcCC90F1FD"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AvashyaVpcStack/AvashyaVpc/IsolatedDBSubnet2/RouteTable"
   }
  },
  "AvashyaVpcIsolatedDBSubnet2RouteTableAssociation15ACCE50": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "AvashyaVpcIsolatedDBSubnet2RouteTable9668D1D2"
    },
    "SubnetId": {
     "Ref": "AvashyaVpcIsolatedDBSubnet2SubnetA9958B2B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AvashyaVpcStack/AvashyaVpc/IsolatedDBSubnet2/RouteTableAssociation"
   }
  },
  "AvashyaVpcIGWBBBA8DE4": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "AvashyaVpcStack/AvashyaVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "AvashyaVpcStack/AvashyaVpc/IGW"
   }
  },
  "AvashyaVpcVPCGW83C91930": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "AvashyaVpcIGWBBBA8DE4"
    },
    "VpcId": {
     "Ref": "AvashyaVpcCC90F1FD"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AvashyaVpcStack/AvashyaVpc/VPCGW"
   }
  },
  "AvashyaVpcS3GatewayEndpoint5E3D1592": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "RouteTableIds": [
     {
      "Ref": "AvashyaVpcPrivateAppSubnet1RouteTable00D7C96C"
     },
     {
      "Ref": "AvashyaVpcPrivateAppSubnet2RouteTableE4303AFB"
     }
    ],
    "ServiceName": {
     "Fn::Join": [
      "",
      [
       "com.amazonaws.",
       {
        "Ref": "AWS::Region"
       },
       ".s3"
      ]
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "AvashyaVpcStack/AvashyaVpc"
     }
    ],
    "VpcEndpointType": "Gateway",
    "VpcId": {
     "Ref": "AvashyaVpcCC90F1FD"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AvashyaVpcStack/AvashyaVpc/S3GatewayEndpoint/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/0WOQQrCQAxFz+J+OmrVA4iIuJGhlW4ljRGjNVM6GUsR7y7Falf//8cjJLXpamHnE2hDgud7UnFpX7kC3g204USY2ldRo9lcpHAb42JZMeaxFNKejS3zUekIZUUjH9k6BI8Myl7+cl+2e9fHAXQHSi10xjX8BKXx8F6UGqG/8P1kWGtVwOuDRM1Aihq3cq49iw7qb75NRsHHBultXKdXL9OFnS/tbHILzEkTRflBNvvmB+Lm//MZAQAA"
   },
   "Metadata": {
    "aws:cdk:path": "AvashyaVpcStack/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "ExportsOutputRefAvashyaVpcCC90F1FD1420099A": {
   "Value": {
    "Ref": "AvashyaVpcCC90F1FD"
   },
   "Export": {
    "Name": "AvashyaVpcStack:ExportsOutputRefAvashyaVpcCC90F1FD1420099A"
   }
  },
  "ExportsOutputRefAvashyaVpcIsolatedDBSubnet1Subnet3053D1031079083E": {
   "Value": {
    "Ref": "AvashyaVpcIsolatedDBSubnet1Subnet3053D103"
   },
   "Export": {
    "Name": "AvashyaVpcStack:ExportsOutputRefAvashyaVpcIsolatedDBSubnet1Subnet3053D1031079083E"
   }
  },
  "ExportsOutputRefAvashyaVpcIsolatedDBSubnet2SubnetA9958B2B4ABC5007": {
   "Value": {
    "Ref": "AvashyaVpcIsolatedDBSubnet2SubnetA9958B2B"
   },
   "Export": {
    "Name": "AvashyaVpcStack:ExportsOutputRefAvashyaVpcIsolatedDBSubnet2SubnetA9958B2B4ABC5007"
   }
  },
  "ExportsOutputRefAvashyaVpcPrivateAppSubnet1Subnet42FA08DE66B0A361": {
   "Value": {
    "Ref": "AvashyaVpcPrivateAppSubnet1Subnet42FA08DE"
   },
   "Export": {
    "Name": "AvashyaVpcStack:ExportsOutputRefAvashyaVpcPrivateAppSubnet1Subnet42FA08DE66B0A361"
   }
  },
  "ExportsOutputRefAvashyaVpcPrivateAppSubnet2Subnet705404F76A20E04D": {
   "Value": {
    "Ref": "AvashyaVpcPrivateAppSubnet2Subnet705404F7"
   },
   "Export": {
    "Name": "AvashyaVpcStack:ExportsOutputRefAvashyaVpcPrivateAppSubnet2Subnet705404F76A20E04D"
   }
  },
  "ExportsOutputRefAvashyaVpcPublicSubnet1Subnet0AD32FA1AC45D685": {
   "Value": {
    "Ref": "AvashyaVpcPublicSubnet1Subnet0AD32FA1"
   },
   "Export": {
    "Name": "AvashyaVpcStack:ExportsOutputRefAvashyaVpcPublicSubnet1Subnet0AD32FA1AC45D685"
   }
  },
  "ExportsOutputRefAvashyaVpcPublicSubnet2Subnet23D980E85F043558": {
   "Value": {
    "Ref": "AvashyaVpcPublicSubnet2Subnet23D980E8"
   },
   "Export": {
    "Name": "AvashyaVpcStack:ExportsOutputRefAvashyaVpcPublicSubnet2Subnet23D980E85F043558"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
